--- a/src/component/common/button.css
+++ b/src/component/common/button.css
@@ -117,3 +117,13 @@ line-height: 20px;
     outline: none;
     box-shadow: none;
   }
+  /* Crd Component */
+  .CardStyling{
+    width: 30%;
+    margin-left: 15px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.CardImageStyling{
+width:100%;
+height: 150px;
+}
