--- a/src/component/airplane/airplane.css
+++ b/src/component/airplane/airplane.css
@@ -5,7 +5,7 @@
     display: flex;
     width: 100%;
     height: 20vh;
-    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 
 }
 .AirCardContainer{
