--- a/src/component/componentstyle.css
+++ b/src/component/componentstyle.css
@@ -19,7 +19,7 @@
     align-items: center;
     width: 100%;
     height: 30vh;
-   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .FormCustomize{ 
 
