--- a/src/component/hotel/hotelComponent.css
+++ b/src/component/hotel/hotelComponent.css
@@ -8,10 +8,14 @@
 
 .ImageContainer{
 width: 40%;
+margin-left: 10px;
+margin-top: 10px;
 /* background-color: tomato; */
 }
 .IconCustomize{
     margin-left: 20px;
+    color: #2EC2E2
+    
 }
 .UpperContainerImage{
     width: 100%;
@@ -36,10 +40,8 @@ width: 40%;
     margin-top: 2%;
 }
 .CardStylingHotel{
-width: 100%;
 /* height: 40vh; */
-margin-left: 15px;
-box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .HeaderHotels{
     display: flex;
@@ -72,7 +74,7 @@ box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
 .HeaderTextContainer{
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 70%;
 }
 .PriceChange{
     display: flex;
@@ -121,7 +123,7 @@ margin-bottom: 20px;
 display: flex;
 justify-content: center;
 align-items: center;
-box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 
 /* box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); */
 }
@@ -162,7 +164,9 @@ box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
 }
 .ShowMoreContainer{
     background-color: green;
-    width: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 .ShowmoreButton{
     width: 100%;
@@ -194,12 +198,13 @@ width: 100%;
 height: 30vh;
 display: flex;
 flex-direction: row !important;
-box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .LeftImageContainer{
     width: 30%;
-    height: 100%;
+    height: 90%;
+    margin: 10px;
+
 }
 .ImageStyling{
     width: 100%;
@@ -215,7 +220,7 @@ box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
     display: flex;
     justify-content: center;
     flex-direction: column;
-    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 
 }
 .HotelTypeTitle{
@@ -232,6 +237,7 @@ box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
 }
 .IconFeatures{
     margin-right: 10px;
+    color: #2EC2E2;
 }
 .FeaturesItems{
 margin-top: 20px;
@@ -242,8 +248,7 @@ margin-left: 2%;
     margin-top: 10px;
     height: 40%;
     flex-direction: row;
-    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .FacilityContainer{
     width: 70%;
@@ -283,6 +288,8 @@ margin-left: 2%;
 }
 .IconCustome{
     margin-right: 15px;
+    color: #2EC2E2;
+
 }
 .MoreDetails{
     margin-top: 15px;
