--- a/src/pages/hotelPage/hotelStyling.css
+++ b/src/pages/hotelPage/hotelStyling.css
@@ -13,3 +13,60 @@
 .HotelInnerContainer{
     width: 70%;
 }
+
+/* Details css Container */
+.DetailsContainer{
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+
+}
+.HotelDetailsVisible{
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.HotelsDetailsContainer{
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+margin-top: 20px;
+
+}
+.DetailsTextCustomize{
+    margin-left: 20px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #2EC2E2;
+
+}
+.CardFacilityContainer{
+box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+display: flex;
+flex-direction: row;
+}
+.LeftContainerFacility{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 30%;
+    height: 10vh;
+}
+.RightContainerFacility{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 70%;
+    height: 10vh;
+}
+.IconModified{
+    color: #2EC2E2;
+    margin-left: 10px;
+}
+.LogoNameCustomize{
+    margin-left: 20px;
+font-family: "Montserrat";
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 20px;
+}
