--- a/src/pages/airlinesPage/airlinesStyling.css
+++ b/src/pages/airlinesPage/airlinesStyling.css
@@ -3,9 +3,82 @@
     width: 100%;
     margin-top: 50px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .FlightInnerContainer{
     width: 70%;
+}
+/* Details airplane Customizer */
+
+
+
+.AirplaneCardContainer{
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+}
+.DescriptionContainer{
+   justify-content: center;
+   align-items: center;
+    display: flex;
+    flex-direction: row;
+}
+.AirDate{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+
+}
+.AirDateFirst{
+    margin-right: 50px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+
+}
+.TimeCustomize{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+}
+.TimingDisplayHourly{
+    display: flex;
+    margin-left: 100px;
+}
+.TimeDisplay{
+    margin-left:100px;
+  
+}
+.DetailAireplane{
+
+
+}
+.TransitDispaly{
+    margin-left: 23%;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+}
+.AirDescription{
+    width: 100px;
+    height: 100px;
+}
+.LogoCustomize{
+    width: 100%;
+    height: 100%;
+}
+.TransitContainer{
+    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+}
+.TimingDisplayHourly{
+
 }
