--- a/src/pages/headePage/headerPage.css
+++ b/src/pages/headePage/headerPage.css
@@ -56,7 +56,7 @@ color: #FFFFFF;
 .SignupButtonContainer{
     margin-left: 2%;
 }
-.HeaderText{
+.HeaderTextHeader{
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
