--- a/src/component/componentstyle.css
+++ b/src/component/componentstyle.css
@@ -17,15 +17,40 @@
 .CardComponent{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
-    height: 30vh;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .FormCustomize{ 
-
+width: 100%;
+padding-left: 30px;
 }
-.InputOuterStyle{
+.InputOuterStyleFrom{
 height: 60px;
+width: 400px;
+}
+.InputOuterStyleTo{
+    margin-left: 15px;
+    height: 60px;
+    width: 400px;
+}
+.InputOuterStyleOneWay{
+    height: 60px;
+    margin-left: 15px;
+width: 400px;
+}
+.InputOuterStyleRounderWay{
+    height: 60px;
+    width: 200px;
+}
+.InputOuterStyleReturn{
+    height: 60px;
+    width: 200px;
+}
+.FlightDepartReturn{
+    display: flex;
+    margin-left: 15px;
+    flex-direction: row;
 }
 .InputOuterStyle::placeholder{
     font-family: "Montserrat";
@@ -38,30 +63,85 @@ height: 60px;
     height: 100%!important;
 }
 .CheckBoxContainer{
-    margin-top: 2%;
-    width: 90%;
+    width: 300px;
 }
 .LowerFlightButton{
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
     align-items: center;
     /* background-color: yellow; */
 }
 .Passenger{
-    margin-right: 20px;
-}
-.PassengerButton{
+   flex: auto;
+   justify-content: flex-end;
+   padding-top: 20px;
     display: flex;
-    margin-left: 30px;
+}
+.PassengerType{
+    margin-right: 15px;
+
+}
+.PassengerTypeInput{
+    border-width: 0px!important;
+
+}
+.PassengerTypeInput:hover{
+    background-color: #f4f2f7;
+    }
+.ClassType{
    
+}
+.ClassTypeInput{
+    border-width: 0px!important;
+   
+}
+.ClassTypeInput:active{
+border-width: 0px;
+}
+.ClassTypeInput:hover{
+    background-color: #f4f2f7;
+}
+
+.PassengerButton{
+
+    display: flex;
+margin-left: 50px;
+padding-right: 25px;   
     /* margin-top: 20px; */
 }
 .ButtonSearch{
     background-color:#003580 !important ;
     width: 150px;
     height: 50px;
+}
+
+/* Hotel Seach COmponent Customize */
+.InputOuterStyleDest{
+height: 60px;
+width: 400px;
+}
+.InputOuterStyleCheckIn{
+    margin-left: 15px;
+    width: 250px;
+    height: 60px;
+}
+.InputOuterStyleCheckOut{
+    width: 250px;
+    height: 60px;
+}
+.InputOuterStyleGuest{
+    margin-left: 15px;
+    width: 300px;
+    height: 60px;
+}
+.PassengerButtonHotel{
+    display: flex;
+    justify-content: flex-end;
+    display: flex;
+    flex: auto;
+    padding-right: 25px;
+    margin-bottom: 10px;
 }
 
 /* styling for card component */
