--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -4,7 +4,7 @@
     /* background-color: teal; */
 }
 .BackgrundImageContainer{
-    height: 30vh;
+    height: 300px;
     /* background-color: tomato; */
 }
 .BackGroundImage{
