--- a/src/component/common/button.css
+++ b/src/component/common/button.css
@@ -11,7 +11,7 @@
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
-    background-color: #3A5277;
+    background-color: #003580;
     color: white;
     border-radius: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -27,7 +27,7 @@
     transition: all 0.3s ease;
   }
   .SelectColor{
-    background-color: #3A5277;
+    background-color: #003580;
   }
   
   .disabled {
@@ -36,16 +36,16 @@
     left: 2px;
   }
   .SelectedButton{
-    border-top-color: #3A5277!important;
+    border-top-color: #003580!important;
     border-bottom-left-radius: 50px;
     border-width: 4px;
     border-top-width: 0px!important;
     padding: 0px!important;
     border-style:none!important;
         width: 50%;
-        height: 50px;
-        background-color: #3A5277!important;
-        border-radius: 50px!important;
+        height: 30px;
+        background-color: #003580!important;
+        border-radius: 30px!important;
         font-family: "Montserrat";
 font-style: normal;
 font-weight: 600;
@@ -66,10 +66,10 @@ color: #FFFFFF;
     border-width: 0px!important;
     border-style:none!important;
     width: 50%;
-    height: 50px;
+    height: 30px;
     background-color: #FFFFFF!important;
     color: #2EC2E2!important;
-    border-radius: 50px!important;
+    border-radius: 30px!important;
     font-family: "Montserrat";
 font-style: normal;
 font-weight: 600;
@@ -90,10 +90,10 @@ line-height: 20px;
     width: 100%;
   }
   .OuterButtonGroup{
-    background-color:#3A5277 ;
+    background-color:#003580 ;
     width: 100%;
-    height: 50px;
-    border-radius: 50px;
+    height: 30px;
+    border-radius: 20px;
   }
   .TextCustomize{
 
