--- a/src/component/componentstyle.css
+++ b/src/component/componentstyle.css
@@ -9,14 +9,15 @@
   color: #003580;
 }
 .ButtonContainer{
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 30px;
+    margin-bottom: 20px;
     width: 300px;
 }
 
 .CardComponent{
     display: flex;
     align-items: center;
+    height: 250px;
     flex-wrap: wrap;
     width: 100%;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
