--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -43,6 +43,10 @@
     font-size: 16px;
     line-height: 20px;
 }
+
+.ButtonClass:active{
+    background-color:#2EC2E2 !important;
+}
 .ButtonClassCat{
     background-color:#003580 !important;
     color: #FFFF;
@@ -60,6 +64,9 @@
 .CardOuterComponent{
     margin-top: 100px;
 
+}
+.LowerHomepage{
+    margin-top: 50px;
 }
 .RecomandedHotel{
     display: flex;
