--- a/src/component/airplane/airplane.css
+++ b/src/component/airplane/airplane.css
@@ -4,7 +4,7 @@
     justify-content: center;
     display: flex;
     width: 100%;
-    height: 20vh;
+    height: 200px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 
 }
@@ -68,6 +68,8 @@
 }
 .LowerFlightDetail{
     margin-top: 2%;
+    width: 200px;
+    cursor: pointer;
     margin-left: 2%;
     align-items: center;
     display: flex;
