--- a/src/component/common/button.css
+++ b/src/component/common/button.css
@@ -127,3 +127,81 @@ line-height: 20px;
 width:100%;
 height: 150px;
 }
+/* Customiz the Checkbox */
+.GlobalCustomCheckBox .GlobalCheckBoxCustomize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.Globalcheckmark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 19px;
+  width: 19px;
+  background-color: #fff;
+  border: 2px solid #2ec2e2;
+  border-radius: 4px;
+}
+
+.GlobalChecBoxContainer:hover input ~ .Globalcheckmark {
+  background: #f2f8f9;
+}
+
+.Globalcheckmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.GlobalChecBoxContainer input:checked ~ .Globalcheckmark:after {
+  display: block;
+}
+
+.GlobalChecBoxContainer .Globalcheckmark:after {
+  left: 5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #2ec2e2;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
+.GlobalCheckBoxText {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  color: #5e7291;
+  font-weight: 500;
+  font-size: 14px;
+  margin-left: 10px;
+}
+.GlobalChecBoxContainer {
+  display: flex;
+  margin-right: 50px;
+  /* justify-content: center; */
+  /* margin-right: 30%; */
+  margin-bottom: 2%;
+ 
+}
+/* customize the range */
+.CustomizeRange{
+  height: 42px;
+  width: 42px;
+  border-radius: 42px;
+  background-color: #FFF;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  box-shadow: 0px 2px 6px #AAA
+}
+.CustomizeRange:focus {
+  outline:none!important
+}
+
