--- a/src/component/componentstyle.css
+++ b/src/component/componentstyle.css
@@ -146,3 +146,102 @@ width: 400px;
 }
 
 /* styling for card component */
+@media screen and (max-width: 480px) {
+    .CardComponent{
+        height: auto;
+    }
+    .InputOuterStyleDest{
+        height: 60px;
+        width: 100%;
+        }
+        .InputOuterStyleCheckIn{
+            margin-left: 0px;
+            width: 100%;
+            height: 60px;
+        }
+        .InputOuterStyleCheckOut{
+            width: 100%;
+            height: 60px;
+        }
+        .InputOuterStyleGuest{
+            margin-left: 0px;
+            width: 100%;
+            height: 60px;
+        }
+        .FormCustomize{
+            padding-left:10px;
+            padding-right:10px;       
+       
+         }
+         .ButtonGroupComponent{
+             width: 100%;
+         }
+         .TopButtonContainer{
+width: 100%;
+         }
+         .CardOuterComponent{
+             margin-top: 10px;
+             width: 100%;
+         }
+         .RecomandedHotel{
+margin-top: 10px;
+margin-bottom: 10px;
+         }
+         .ButtonGroupComponentCat{
+             width: 100%;
+             height: auto;
+             display: flex;
+             flex-wrap: wrap;
+         }
+         .ButtonClassCat{
+             margin-bottom: 10px;
+         }
+         .CardStyling{
+             width: 100%;
+             margin-left:0px;
+             margin-top: 15px;
+         }
+         .CardDisplaying{
+width: 100%;
+display: flex;
+flex-direction: column;
+         }
+         .InputOuterStyleTo{
+margin-left: 0px;
+         }
+         .InputOuterStyleOneWay{
+             margin-left: 0px;
+         }
+         .SeachContainerComponent{
+             width: 100%;
+         }
+         .FlightDepartReturn{
+             margin-left: 0;
+         }
+         .RecomHotelStyling{
+             font-size: 20px;
+         }
+         /* .NavbarIcon{
+             height: 50px;
+         } */
+         .navbar.navbar-expand-md{
+             flex-direction: row-reverse;
+         }
+         .collapse.show.navbar-collapse {
+            position: relative;
+            z-index: 44;
+            margin: 8px -8px;
+            transition: all .3s ease-out
+         }
+         .HomebarTextComponent{
+             font-size: 25px;
+         }
+         .HeaderItemComponent{
+             display: flex;
+             justify-content: space-between;
+         }
+         .NavTextCustomize{
+             font-size: 15px;
+         }
+
+}
