--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -1,6 +1,6 @@
 .HomeMainContainer{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     /* background-color: teal; */
 }
 .BackgrundImageContainer{
@@ -133,3 +133,30 @@
     display: block;
     background-color: #18495f;
 }
+/* Adding the media querry for the responsive design */
+@media screen and (max-width: 480px) {
+    .BackgrundImageContainer {
+      height: 150px;
+    }
+    .SearchMainContainer{
+        margin-top: -20px;
+        
+       
+        /* background-color: green; */
+    }
+    .SearchInnerComponent{
+        width:100%;
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+    .CardDisplaying{
+        width: 100%;
+       margin-top: 5px;
+    }
+    .CardComponent{
+        display: flex;
+        height: 300px;
+        flex-direction: column;
+    }
+  }
