--- a/src/component/componentstyle.css
+++ b/src/component/componentstyle.css
@@ -1,3 +1,5 @@
+
+
 .OuterTextContainer{
     margin-top: 3%;
     margin-bottom: 3%;
@@ -18,7 +20,7 @@
     display: flex;
     align-items: center;
     height: 250px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 100%;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
@@ -28,28 +30,29 @@ padding-left: 30px;
 }
 .InputOuterStyleFrom{
 height: 60px;
-width: 400px;
+width: 30%;
 }
 .InputOuterStyleTo{
     margin-left: 15px;
     height: 60px;
-    width: 400px;
+    width: 30%;
 }
 .InputOuterStyleOneWay{
     height: 60px;
     margin-left: 15px;
-width: 400px;
+width: 35%;
 }
 .InputOuterStyleRounderWay{
     height: 60px;
-    width: 200px;
+    width: 50%;
 }
 .InputOuterStyleReturn{
     height: 60px;
-    width: 200px;
+    width: 50%;
 }
 .FlightDepartReturn{
     display: flex;
+    width: 35%;
     margin-left: 15px;
     flex-direction: row;
 }
@@ -62,6 +65,40 @@ width: 400px;
 }
 .InputCustomize{
     height: 100%!important;
+}
+.CalenderCustomize{
+    margin-left: 15px;
+}
+.DateRangePickerInput{
+    display: flex;
+    align-items: center;
+    /* border: 1px solid #ced4da */
+
+}
+.DateInput{
+    width: auto!important;
+}
+.DateInput_input{
+    height: 60px;
+    border-radius: .25rem;
+    border: 1px solid #ced4da
+
+}
+.DateInput_input:focus{
+    color: #495057;
+    /* border-radius: .25rem; */
+    background-color: #fff;
+    border-color: #80bdff;
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+}
+.DateRangePickerInput_arrow{
+    color:#2EC2E2!important;
+}
+.DateRangePickerInput_arrow_svg{
+    fill:#2EC2E2!important;
+}
+.DateRangePickerInput__withBorder{
+border-style: none!important;
 }
 .CheckBoxContainer{
     width: 300px;
@@ -108,7 +145,7 @@ border-width: 0px;
 
     display: flex;
 margin-left: 50px;
-padding-right: 25px;   
+padding-right: 2%;   
     /* margin-top: 20px; */
 }
 .ButtonSearch{
@@ -120,20 +157,20 @@ padding-right: 25px;
 /* Hotel Seach COmponent Customize */
 .InputOuterStyleDest{
 height: 60px;
-width: 400px;
+width: 34%;
 }
 .InputOuterStyleCheckIn{
     margin-left: 15px;
-    width: 250px;
+    width: 20%;
     height: 60px;
 }
 .InputOuterStyleCheckOut{
-    width: 250px;
+    width: 20%;
     height: 60px;
 }
 .InputOuterStyleGuest{
     margin-left: 15px;
-    width: 300px;
+    width: 21%;
     height: 60px;
 }
 .PassengerButtonHotel{
@@ -141,7 +178,7 @@ width: 400px;
     justify-content: flex-end;
     display: flex;
     flex: auto;
-    padding-right: 25px;
+    padding-right: 2%;
     margin-bottom: 10px;
 }
 
@@ -162,6 +199,9 @@ width: 400px;
         .InputOuterStyleCheckOut{
             width: 100%;
             height: 60px;
+        }
+        .InputOuterStyleFrom{
+            width: 100%;
         }
         .InputOuterStyleGuest{
             margin-left: 0px;
@@ -208,15 +248,18 @@ flex-direction: column;
          }
          .InputOuterStyleTo{
 margin-left: 0px;
+width: 100%;
          }
          .InputOuterStyleOneWay{
              margin-left: 0px;
+             width: 100%;
          }
          .SeachContainerComponent{
              width: 100%;
          }
          .FlightDepartReturn{
              margin-left: 0;
+             width: 100%;
          }
          .RecomHotelStyling{
              font-size: 20px;
@@ -241,7 +284,10 @@ margin-left: 0px;
              justify-content: space-between;
          }
          .NavTextCustomize{
-             font-size: 15px;
+             font-size: 14px;
+         }
+         .HeaderTextHeader{
+font-size: 20px;
          }
 
 }
