--- a/src/pages/accountPage/accountCustomize.css
+++ b/src/pages/accountPage/accountCustomize.css
@@ -19,3 +19,149 @@
     width: 70%;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
+.AccountInputField{
+    font-family: 'Montserrat';
+    height: 50px!important;
+    background: #ffffff;
+    border: 2px solid #e3e9f1;
+    box-sizing: border-box;
+    border-radius: 6px;
+    font-size: 15px;
+    color: #162a49;
+    font-weight: 500;
+}
+.LabelCustomize{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    align-items: center;
+}
+.LabelCustomize::placeholder{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    align-items: center;
+}
+.ButtonCustomizeBook{
+    background-color: #162a49!important;
+    height: 50px;
+    width: 100%;
+
+}
+/* Stripe Paymenet method */
+* {
+    box-sizing: border-box;
+  }
+
+  body,
+  html {
+      font-size: 18px;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  }
+
+  h1 {
+    color: #32325d;
+    font-weight: 400;
+    line-height: 50px;
+    font-size: 40px;
+    margin: 20px 0;
+    padding: 0;
+  }
+
+  .Checkout {
+    margin: 0 auto;
+    display: flex;
+    height: 100%;
+    max-width: 800px;
+    box-sizing: border-box;
+    padding: 0 5px;
+  }
+
+  label {
+    color: #6b7c93;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+  }
+
+  button {
+    white-space: nowrap;
+    border: 0;
+    outline: 0;
+    display: inline-block;
+    height: 50px;
+    line-height: 40px;
+    padding: 0 14px;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    color: #fff;
+    border-radius: 4px;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    background-color: #162a49;
+    text-decoration: none;
+    -webkit-transition: all 150ms ease;
+    transition: all 150ms ease;
+    margin-top: 10px;
+  }
+
+  form {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      flex-direction: column;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+
+  }
+
+  button:hover {
+    color: #fff;
+    cursor: pointer;
+    background-color: #7795f8;
+    transform: translateY(-1px);
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+  }
+
+  input,
+  .StripeElement {
+    display: block;
+    margin: 10px 0 20px 0;
+    height: 50px;
+    max-width: 100%;
+    padding: 10px 14px;
+    font-size: 1em;
+    font-family: 'Source Code Pro', monospace;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    border: 0;
+    outline: 0;
+    border-radius: 4px;
+    background: white;
+    font-family: "Montserrat";
+
+  }
+
+  input::placeholder {
+    color: #aab7c4;
+  }
+
+  input:focus,
+  .StripeElement--focus {
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    -webkit-transition: all 150ms ease;
+    transition: all 150ms ease;
+  }
+
+  .StripeElement.IdealBankElement,
+  .StripeElement.PaymentRequestButton {
+    padding: 0;
+  }
+  .StripLabelPayment{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    align-items: center;
+  }
