--- a/src/pages/headePage/headerPage.css
+++ b/src/pages/headePage/headerPage.css
@@ -24,8 +24,8 @@
 
 }
 .NavTextCustomize{
-    margin-left: 2%;
-    flex-wrap: wrap;
+margin-left: 2%;
+flex-wrap: wrap;
 font-family: "Montserrat";
 font-style: normal;
 font-weight: bold;
@@ -35,7 +35,7 @@ color: #FFFFFF;
 
 }
  .NavTextCustomize:hover::after{
-    width: 80px;
+    width: auto;
   }
  .NavTextCustomize::after{
     content:"";
@@ -53,6 +53,17 @@ font-size: 1.5em;
 line-height: 20px;
 color: #FFFFFF;
 }
+.HeaderTextCustomize:hover::after{
+    width: auto;
+  }
+ .HeaderTextCustomize::after{
+    content:"";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #fff;
+  }
 .HomebarTextComponent{
 font-family: "Montserrat";
 font-style: normal;
