--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -24,7 +24,7 @@
 }
 .ButtonGroupComponent{
     height: 60px;
-    width: 350px ;
+    width: 50% ;
   
     /* background-color:red; */
     /* color: red; */
@@ -34,8 +34,41 @@
     width: 600px;
 }
 .ButtonClass{
+    height: 100%;
     background-color:#003580 !important;
     color: #FFFF;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+}
+.OuterButtonGroupHome{
+height: 60px;
+}
+.btn-secondary{
+    text-decoration: none;
+    margin-top: 0px;
+    border-color: none;
+}
+.btn-secondary:hover{
+    text-decoration: none!important;
+    transform: none!important;
+    border-width: 2px #ffff!important;
+
+}
+.btn-secondary:focus{
+    text-decoration: none!important;
+    transform: none!important;
+    border-width: 2px #ffff!important;
+
+}
+.OuterButtonGroupHome:hover{
+    font-style: normal;
+}
+.ButtonClassActive{
+    height: 100%;
+    background-color:#FFFF !important;
     color: #2EC2E2!important;
     font-family: "Montserrat";
     font-style: normal;
@@ -97,7 +130,7 @@
 }
 /* footer csss */
 .Footer {
-    background-color: #1f5f79;
+    background-color: #234476;
     padding: 80px 0;
     margin-top: 10%;
     position: relative;
@@ -131,8 +164,25 @@
     padding: 30px 0;
     position: relative;
     display: block;
-    background-color: #18495f;
+    background-color: #003580;
 }
+.RightsNepCustomize{
+    color: #ffff;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+
+}
+a{
+    color: #2EC2E2!important;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    text-decoration: none!important;
+    font-size: 20px;
+}
+
 /* Adding the media querry for the responsive design */
 @media screen and (max-width: 480px) {
     .BackgrundImageContainer {
