--- a/src/pages/headePage/headerPage.css
+++ b/src/pages/headePage/headerPage.css
@@ -1,6 +1,6 @@
 .NavbarIcon{
-    background-color:  #234476;
-    ;
+    /* background-color:  #061739; */
+    background-color: #0f295d;
     height: 100%;
 }
 .HeaderComponent{
