--- a/src/component/hotel/hotelComponent.css
+++ b/src/component/hotel/hotelComponent.css
@@ -12,6 +12,11 @@ margin-left: 10px;
 margin-top: 10px;
 /* background-color: tomato; */
 }
+.TravelImageContainer{
+    /* width: 350px;
+    height: 250px; */
+padding: 10px;
+}
 .IconCustomize{
     margin-left: 20px;
     color: #2EC2E2
@@ -21,6 +26,10 @@ margin-top: 10px;
     width: 100%;
     height: 70%;
 }
+.TravelUpperContainerImage{
+width: 350px;
+height: 250px;
+}
 .LowerImageContainer{
     display: flex;
     flex-direction: row;
@@ -29,9 +38,19 @@ margin-top: 10px;
     justify-content: space-between;
     align-items: center;
 }
+.TravelLowerImageContainer{
+    display: flex;
+    flex-direction: row;
+    height: 120px;
+    width: 100%;
+   
+    align-items: center;
+}
 .SmallImage{
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 100%;
+    margin-right: 10px;
+    padding-top: 10px;
     /* background-color: green; */
 }
 .ContainDetails{
@@ -50,21 +69,24 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
     width: 100%;
     margin-bottom: 2%;
 }
+.TravelHeaderHotels{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 2%;
+}
 .HeaderText{
     color: #2EC2E2!important;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
-    line-height: 20px;
+   
 
 }
 .RatingDispaly{
     margin-left: 15px;
 
-}
-.PriceChange{
-    margin-left: 15px;
 }
 .RatingDisplay{
     display: flex;
@@ -77,6 +99,8 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
     width: 70%;
 }
 .PriceChange{
+    margin-left: 15px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,6 +110,7 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
+    width: 100px;
 }
 .TextPrice{
     margin-left: 10px;
