--- a/src/pages/airlinesPage/airlinesStyling.css
+++ b/src/pages/airlinesPage/airlinesStyling.css
@@ -21,8 +21,9 @@
     margin-left: 30px; 
 }
 .FlightInnerLogoAndCustomize{
-    width: 25%;
     height: 100%;
+    width: 25%;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -33,6 +34,7 @@
     padding-right: 30px;
 }
 .FilterLogoCustomize{
+    font-size: 25px;
    color: #2ec2e2
 }
 .FlightInnerLogoAndCustomize:hover::before{
