--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -130,7 +130,7 @@ height: 60px;
 }
 /* footer csss */
 .Footer {
-    background-color: #234476;
+    background-color: #0f295d;
     padding: 80px 0;
     margin-top: 10%;
     position: relative;
@@ -164,7 +164,7 @@ height: 60px;
     padding: 30px 0;
     position: relative;
     display: block;
-    background-color: #003580;
+    background-color: #061739;;
 }
 .RightsNepCustomize{
     color: #ffff;
