--- a/src/pages/travelAndTour/travelTour.css
+++ b/src/pages/travelAndTour/travelTour.css
@@ -14,11 +14,10 @@ letter-spacing: 0.06em;
 color: #808FA6;
 }
 .TravelInnerCardContainer{
-    padding-left: 2%;
+    /* padding-left: 20px; */
 }
 .TravelContainDetails{
-         margin-left: 2%; 
-    margin-top: 2%;
+    margin-top: 30px;
 }
 .TravelHeaderTextContainer{
     display: flex;
@@ -106,7 +105,7 @@ letter-spacing: -0.03em;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
-    line-height: 16px;
+    line-height: 25px;
     color: #808FA6;
     letter-spacing: 0.06em;   
 }
