--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -68,8 +68,8 @@ height: 60px;
 }
 .ButtonClassActive{
     height: 100%;
-    background-color:#FFFF !important;
-    color: #2EC2E2!important;
+    background-color:#2EC2E2 !important;
+    color: #162A49!important;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
