api integritation for hotel

--- a/src/pages/hotelPage/hotelStyling.css
+++ b/src/pages/hotelPage/hotelStyling.css
@@ -32,6 +32,8 @@ margin-top: 20px;
 }
 .DetailsTextCustomize{
     margin-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
