--- a/src/component/hotel/hotelComponent.css
+++ b/src/component/hotel/hotelComponent.css
@@ -7,9 +7,7 @@
 }
 
 .ImageContainer{
-width: 40%;
-margin-left: 10px;
-margin-top: 10px;
+/* width: 40%; */
 /* background-color: tomato; */
 }
 .TravelImageContainer{
@@ -23,17 +21,21 @@ padding: 10px;
     
 }
 .UpperContainerImage{
-    width: 100%;
-    height: 70%;
+    width: 360px;
+    height: 250px;
+    padding-left: 10px;
+    padding-top: 10px;
+    /* padding: 10px; */
 }
 .TravelUpperContainerImage{
 width: 350px;
-height: 250px;
+height: 255px;
 }
 .LowerImageContainer{
     display: flex;
     flex-direction: row;
-    height: 30%;
+    height: 130px;
+    padding-left: 10px;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -47,9 +49,9 @@ height: 250px;
     align-items: center;
 }
 .SmallImage{
-    width: 110px;
     height: 100%;
-    margin-right: 10px;
+    width: 120px;
+    padding-right: 10px;
     padding-top: 10px;
     /* background-color: green; */
 }
@@ -84,17 +86,13 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
    
 
 }
-.RatingDispaly{
-    margin-left: 15px;
-
-}
 .RatingDisplay{
     display: flex;
     justify-content: flex-end;
-    width: 20%;
 }
 .HeaderTextContainer{
     display: flex;
+    align-items: center;
     flex-direction: row;
     width: 70%;
 }
@@ -119,10 +117,11 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 .RatingValue{
     display: flex;
     justify-content: center;
+    align-items: center!important;
+    height: fit-content;
     align-items: center;
-    background-color: #003580;
-    margin-right: 20px;
-    color: #2EC2E2;
+    background-color: #003580!important;
+    color: #2EC2E2!important;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
@@ -133,7 +132,7 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
     margin-right: 10px;
 }
 .RatingType{
-    margin-right: 20px;
+    margin-left: 20px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
@@ -143,8 +142,9 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 display: flex;
 flex-direction: row;
 width: 97%;
-height: 8vh;
 margin-bottom: 20px;
+padding-top: 10px;
+padding-bottom: 10px;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -220,7 +220,6 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 /* Hotel TYpe css8*/
 .HotelTypeCard{
 width: 100%;
-height: 30vh;
 display: flex;
 flex-direction: row !important;
 box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
@@ -249,6 +248,7 @@ box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
 .HotelTypeTitle{
     margin-left: 2%;
+    padding-top: 10px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
@@ -270,7 +270,6 @@ margin-left: 2%;
 .LowerContainDetails{
     display: flex;
     margin-top: 10px;
-    height: 40%;
     flex-direction: row;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
 }
@@ -318,6 +317,7 @@ margin-left: 2%;
 .MoreDetails{
     margin-top: 15px;
     margin-left: 2%;
+    padding-bottom: 10px;
 }
 .NightlyPrice{
     width: 90%;
