--- a/src/pages/headePage/headerPage.css
+++ b/src/pages/headePage/headerPage.css
@@ -49,7 +49,7 @@ color: #FFFFFF;
 font-family: "Montserrat";
 font-style: normal;
 font-weight: bold;
-font-size: 1.5em;
+font-size: 16px;
 line-height: 20px;
 color: #FFFFFF;
 }
@@ -68,7 +68,7 @@ color: #FFFFFF;
 font-family: "Montserrat";
 font-style: normal;
 font-weight: 600;
-font-size: 2em;
+font-size: 22px;
 line-height: 33px;
 /* identical to box height */
 
@@ -83,7 +83,7 @@ color: #FFFFFF;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
-    font-size: 1.5em;
+    font-size: 16px;
     line-height: 33px;
     /* identical to box height */
     
