--- a/src/pages/homePage/homeStyles.css
+++ b/src/pages/homePage/homeStyles.css
@@ -49,7 +49,7 @@ height: 60px;
 .btn-secondary{
     text-decoration: none;
     margin-top: 0px;
-    border-color: none;
+    border-color: transparent !important;
 }
 .btn-secondary:hover{
     text-decoration: none!important;
@@ -68,7 +68,7 @@ height: 60px;
 }
 .ButtonClassActive{
     height: 100%;
-    background-color:#2EC2E2 !important;
+    background-color:#FFFF !important;
     color: #162A49!important;
     font-family: "Montserrat";
     font-style: normal;
