--- a/src/pages/travelAndTour/travelTour.css
+++ b/src/pages/travelAndTour/travelTour.css
@@ -113,6 +113,10 @@ letter-spacing: -0.03em;
     padding-top: 50px;
     padding-bottom: 20px;
 }
+.SingleDatePickerInput__withBorder{
+    border: none!important;
+
+}
 /*
 //box shadow 
 
