--- a/src/component/hotel/hotelComponent.css
+++ b/src/component/hotel/hotelComponent.css
@@ -51,6 +51,7 @@ height: 255px;
 .SmallImage{
     height: 100%;
     width: 120px;
+    cursor: pointer;
     padding-right: 10px;
     padding-top: 10px;
     /* background-color: green; */
