--- a/src/pages/accountPage/accountCustomize.css
+++ b/src/pages/accountPage/accountCustomize.css
@@ -1,5 +1,5 @@
 .AccountContainer{
-    /* background-color: red; */
+    background:  #f2f4fa;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -8,12 +8,12 @@
 .AccountFormCustomize{
     width: 70%;
     margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 
 }
 .AccountCardCustomize{
     display: flex;
-    margin-top: 100px;
+    background-color: #FFFF;
     justify-content: center;
     align-items: center;
     width: 70%;
@@ -96,9 +96,9 @@
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
     color: #fff;
     border-radius: 4px;
+    text-transform: capitalize;
     font-size: 15px;
     font-weight: 600;
-    text-transform: uppercase;
     letter-spacing: 0.025em;
     background-color: #162a49;
     text-decoration: none;
