--- a/src/pages/airlinesPage/airlinesStyling.css
+++ b/src/pages/airlinesPage/airlinesStyling.css
@@ -13,6 +13,7 @@
 }
 .CheapestFilterContainer{
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    background-color: #FFFF;
     height: 70px;
     margin-top: 50px;
     display: flex;
@@ -131,6 +132,7 @@
 .SearchandFilter{
     display: flex;
     width: 100%;
+    background-color: #f2f4fa;
     justify-content: center;
     
 }
