--- a/src/pages/headePage/headerPage.css
+++ b/src/pages/headePage/headerPage.css
@@ -4,10 +4,20 @@
     height: 100%;
 }
 .HeaderComponent{
-    width: 80%;
+    width: 90%;
     display: flex;
     /* align-items: center;
     justify-content: center; */
+}
+.ProfileIconCUstomize{
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+}
+.ProfileImageCustomize{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 .HomevbarComponent{
     margin-left: 5%;
@@ -34,6 +44,15 @@ line-height: 20px;
 color: #FFFFFF;
 
 }
+.Header2UL a {
+    padding: 10px 15px;
+  }
+  
+  .NavTextCustomize .active {
+    background-color: #2ec2e2;
+    height: 2px;
+    height: fit-content;
+  }
  .NavTextCustomize:hover::after{
     width: auto;
   }
@@ -78,6 +97,9 @@ color: #FFFFFF;
 }
 .SignupButtonContainer{
     margin-left: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .HeaderTextHeader{
     font-family: "Montserrat";
