--- a/src/pages/loginPage/loginPage.css
+++ b/src/pages/loginPage/loginPage.css
@@ -10,18 +10,19 @@
   }
   
   .LoginMainContainer {
-    background-color: #ffffff;
+    background-color: #f2f4fa;
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
-      margin-top: 100px;
+      padding-top: 40px;
       flex-direction: row;
   }
   .OuterMainContainer{
     width: 50%;
       box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+      background-color: #FFFF;
       display: flex;
       justify-content: center;
       align-items: center;
