--- a/src/pages/travelAndTour/travelTour.css
+++ b/src/pages/travelAndTour/travelTour.css
@@ -25,6 +25,90 @@ color: #808FA6;
      /* width: 70%;  */
 
 }
+.ImageCustomizeSlide{
+    width: 100%;
+    /* height: 100%; */
+}
+.TravelTourContentConytainer{
+width: 100%;
+display: flex;
+background-color: #f2f4fa;
+justify-content: center;
+align-items: center;
+padding-top: 40px;
+}
+.TravelInnerContainer{
+    width: 70%;
+    /* box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07); */
+
+}
+.CardDescriptionContainer{
+    /* box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07); */
+
+}
+.LowerDescriptionContainer{
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    padding: 20px;
+    background-color: #FFFF;
+    /* height: 20vh; */
+    margin-top: 20px;
+
+}
+.ButtonClassTourDisable{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    padding-left: 15px;
+    color: #FFFF;
+    padding-right: 15px;
+    cursor: pointer;
+    line-height: 20px; 
+    text-transform: uppercase;
+}
+.ButtonClassActiveTour{
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #2EC2E2;
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
+    line-height: 20px; 
+    text-transform: uppercase;
+}
+.BookingButtonCustomize{
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.ButtonClassActiveTour::after{
+position:absolute;
+top: 0;
+right:-10px;
+bottom:0;
+border-top: 10px solid transparent;
+border-bottom: 10px solid transparent;
+border-left: 10px solid #303030;
+}
+.TitleForDescription{
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.07);
+    margin-top: 50px;
+    background-color:#0f295d ;
+    display: flex;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.CarouselCustomize{
+    /* height: 200px; */
+}
+.ImageContentTravel{
+    width: 50%;
+}
+.ImageTravelContainer{
+    height: 550px;
+}
 
 .DestinationTo{
     padding-top: 5px;
@@ -49,8 +133,6 @@ font-size: 15px;
 line-height: 16px;
 color: #808FA6;
 letter-spacing: 0.06em;
-/* text-transform: uppercase; */
-
 }
 .PriceTravelDisplay{
 
